fix: change loader styling to avoid layout shift

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .app {
-  padding: 2rem;
+  padding: 4rem 2rem;
 }
 
 header {
